# Visitor-Game-Engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Documentation.html  DoxygenCOnfig  Makefile  README.md  hello.cpp  web_main.cpp
classes/: AbstractCollisionVisitor.cpp  AbstractCollisionVisitor.h  AbstractDrawingVisitor.h  AbstractInputWrapper.h  AbstractRenderer.cpp  AbstractRenderer.h  AbstractScene.h  Backend.h  BounceBoundsVisitor.cpp  BounceBoundsVisitor.h  BoundingBoxCollisionVisitor.cpp  BoundingBoxCollisionVisitor.h  BoundsVisitor.cpp  BoundsVisitor.h  Clock.h  DrawingVisitor.cpp  DrawingVisitor.h  EasyGameEngine.cpp  EasyGameEngine.h  ForceVisitor.cpp  ForceVisitor.h  GameEngine.cpp  GameEngine.h  GravityVisitor.cpp  GravityVisitor.h  GridDrawingVisitor.cpp  GridDrawingVisitor.h  LayeredScene.cpp  LayeredScene.h  RayCastCollisionVisitor.cpp  RayCastCollisionVisitor.h  SDLBackend.cpp  SDLBackend.h  SDLInputWrapper.cpp  SDLInputWrapper.h  SDLRAII.h  SDLRenderer.cpp  SDLRenderer.h  SDLTextureFactory.cpp  SDLTextureFactory.h  (+26 more)
classes/games/: Game.h  Pong.cpp  Pong.h  Quoridor.cpp  Quoridor.h  TicTacToe.cpp  TicTacToe.h
docs/: index.html  uml.plantuml
docs/demos/: pong.html  pong.js  pong.wasm  quoridor.data  quoridor.html  quoridor.js  quoridor.wasm  tictactoe.html  tictactoe.js  tictactoe.wasm
docs/gitbook/: _abstract_collision_visitor_8cpp.md  _abstract_collision_visitor_8cpp_source.md  _abstract_collision_visitor_8h.md  _abstract_collision_visitor_8h_source.md  _abstract_drawing_visitor_8h.md  _abstract_drawing_visitor_8h_source.md  _abstract_input_wrapper_8h.md  _abstract_input_wrapper_8h_source.md  _abstract_renderer_8cpp.md  _abstract_renderer_8cpp_source.md  _abstract_renderer_8h.md  _abstract_renderer_8h_source.md  _abstract_scene_8h.md  _abstract_scene_8h_source.md  _bounce_bounds_visitor_8cpp.md  _bounce_bounds_visitor_8cpp_source.md  _bounce_bounds_visitor_8h.md  _bounce_bounds_visitor_8h_source.md  _bounding_box_collision_visitor_8cpp.md  _bounding_box_collision_visitor_8cpp_source.md  _bounding_box_collision_visitor_8h.md  _bounding_box_collision_visitor_8h_source.md  _force_visitor_8cpp.md  _force_visitor_8cpp_source.md  _force_visitor_8h.md  _force_visitor_8h_source.md  _game_8h.md  _game_8h_source.md  _game_engine_8cpp.md  _game_engine_8cpp_source.md  _game_engine_8h.md  _game_engine_8h_source.md  _gravity_visitor_8cpp.md  _gravity_visitor_8cpp_source.md  _gravity_visitor_8h.md  _gravity_visitor_8h_source.md  _grid_drawing_visitor_8cpp.md  _grid_drawing_visitor_8cpp_source.md  _grid_drawing_visitor_8h.md  _grid_drawing_visitor_8h_source.md  (+82 more)
docs/html/: _abstract_collision_visitor_8h_source.html  _abstract_drawing_visitor_8h_source.html  _abstract_input_wrapper_8h_source.html  _abstract_renderer_8h_source.html  _abstract_scene_8h_source.html  _bounce_bounds_visitor_8h_source.html  _bounding_box_collision_visitor_8h_source.html  _bounds_visitor_8h_source.html  _drawing_visitor_8h_source.html  _force_visitor_8h_source.html  _game_8h_source.html  _game_engine_8h_source.html  _gravity_visitor_8h_source.html  _grid_drawing_visitor_8h_source.html  _layered_scene_8h_source.html  _pong_8h_source.html  _quoridor_8h_source.html  _ray_cast_collision_visitor_8h_source.html  _s_f_m_l_drawing_visitor_8h_source.html  _s_f_m_l_input_wrapper_8h_source.html  _s_f_m_l_renderer_8h_source.html  _scene_8h_source.html  _simple_drawing_visitor_8h_source.html  _simple_scene_8h_source.html  _sprite_8h_source.html  _sprite_proxy_8h_source.html  _text_sprite_proxy_8h_source.html  _texture_factory_8h_source.html  _visitor_8h_source.html  _wrap_bounds_visitor_8h_source.html  annotated.html  annotated_dup.js  class_abstract_collision_visitor-members.html  class_abstract_collision_visitor.html  class_abstract_collision_visitor__coll__graph.map  class_abstract_collision_visitor__coll__graph.md5  class_abstract_collision_visitor__inherit__graph.map  class_abstract_collision_visitor__inherit__graph.md5  class_abstract_drawing_visitor-members.html  class_abstract_drawing_visitor.html  (+174 more)
docs/latex/: annotated.tex  class_abstract_drawing_visitor.eps  class_abstract_drawing_visitor.tex  class_bounce_bounds_visitor.eps  class_bounce_bounds_visitor.tex  class_bounding_box_collision_visitor.eps  class_bounding_box_collision_visitor.tex  class_bounding_box_collision_visitor.tex.tmp  class_bounding_box_collision_visitor__inherit__graph.dot  class_bounds_visitor.eps  class_bounds_visitor.tex  class_bounds_visitor__inherit__graph.dot  class_drawing_visitor.eps  class_drawing_visitor.tex  class_drawing_visitor__inherit__graph.dot  class_force_visitor.eps  class_force_visitor.tex  class_force_visitor__coll__graph.dot  class_game_engine.tex  class_game_engine__coll__graph.dot  class_gravity_visitor.eps  class_gravity_visitor.tex  class_gravity_visitor__inherit__graph.dot  class_ray_cast_collision_visitor.eps  class_ray_cast_collision_visitor.tex  class_ray_cast_collision_visitor__coll__graph.dot  class_s_f_m_l_drawing_visitor.eps  class_s_f_m_l_drawing_visitor.tex  class_scene.tex  class_sprite_proxy.eps  class_sprite_proxy.tex  class_sprite_proxy__coll__graph.dot  class_sprite_proxy__inherit__graph.dot  class_text_sprite_proxy.eps  class_text_sprite_proxy.tex  class_text_sprite_proxy__coll__graph.dot  class_texture_factory.tex  class_visitor.eps  class_visitor.tex  class_visitor__coll__graph.dot  (+6 more)
docs/xml/: _abstract_collision_visitor_8cpp.xml  _abstract_collision_visitor_8h.xml  _abstract_drawing_visitor_8h.xml  _abstract_input_wrapper_8h.xml  _abstract_renderer_8cpp.xml  _abstract_renderer_8h.xml  _abstract_scene_8h.xml  _bounce_bounds_visitor_8cpp.xml  _bounce_bounds_visitor_8h.xml  _bounding_box_collision_visitor_8cpp.xml  _bounding_box_collision_visitor_8h.xml  _force_visitor_8cpp.xml  _force_visitor_8h.xml  _game_8h.xml  _game_engine_8cpp.xml  _game_engine_8h.xml  _gravity_visitor_8cpp.xml  _gravity_visitor_8h.xml  _grid_drawing_visitor_8cpp.xml  _grid_drawing_visitor_8h.xml  _layered_scene_8cpp.xml  _layered_scene_8h.xml  _pong_8cpp.xml  _pong_8h.xml  (+57 more)
games/: Pong.cpp
web/: shell.html
(+68 files in other folders)
